Fix clear cache button  spacing

--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,10 @@ about.css
 	border-bottom: none;
 }
 
+.ui.modal.about .ui.header .icon:only-child {
+	margin: 0 .25rem 0 .75rem;
+}
+
 .ui.modal.about .ui.section.divider:first-of-type {
 	margin-top: -.5rem;
 }
